Fixes #1904 ClayCSS Base Pagination use negative margin on `.page-item` instead of `.page-link` so pagination links using `button` don't have double borders
Fixes #1904 ClayCSS Base Pagination active `z-index` should have priority over hover and focus `z-index` should have priority over active

Fixes #1904 ClayCSS Atlas Pagination `.page-item` should have more space between items so focus styles don't appear too close to an active item

--- a/packages/clay-css/src/scss/variables/_pagination.scss
+++ b/packages/clay-css/src/scss/variables/_pagination.scss
@@ -3,7 +3,7 @@ $pagination-font-size: null !default;
 // Pagination Item
 
 $pagination-item-height: 2.375rem !default; // 38px
-$pagination-item-margin-x: null !default;
+$pagination-item-margin-x: -0.5px !default;
 $pagination-item-margin-y: null !default;
 
 $pagination-item: () !default;
@@ -63,7 +63,7 @@ $pagination-link-hover: map-merge((
 $pagination-link-focus: () !default;
 $pagination-link-focus: map-merge((
 	box-shadow: $pagination-focus-box-shadow,
-	z-index: 3,
+	z-index: 4,
 ), $pagination-link-focus);
 
 $pagination-link-active: () !default;
@@ -72,7 +72,7 @@ $pagination-link-active: map-merge((
 	border-color: $pagination-active-border-color,
 	cursor: default,
 	color: $pagination-active-color,
-	z-index: 2,
+	z-index: 3,
 ), $pagination-link-active);
 
 $pagination-link-disabled: () !default;
